appId: com.claude.climaapp
---
- launchApp
- assertVisible: "Clima por Ciudad"
- tapOn:
    id: "city-input"
- inputText: "Porto"
- pressKey: Enter           # Confirma la entrada y cierra el teclado nativo
# - evalScript: ${output.sleep = (ms) => new Promise(r => setTimeout(r, ms))} # O simplemente una breve pausa implícita
# - tapOn:
#     id: "search-button"
# - tapOn:
#     id: "search-button"
- extendedWaitUntil:
    visible:
      id: "weather-card"
    timeout: 20000
- assertVisible: "Porto"
